Cambios de estilo CSS

--- a/mixit/templates/mixit/base.html
+++ b/mixit/templates/mixit/base.html
@@ -2,21 +2,23 @@
 <html>
     <head>
         <title>La Tormenta Digital</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href='//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext' rel='stylesheet' type='text/css'>
-        <link href="css/styles.css" rel="stylesheet" type="text/css">
+       
 	<!--
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
 	-->
+	<style>
+		body {
+		background-color:#dcdcdc;
+		}
+	</style>
     </head>
     <body>
-        <div class="page-header">
-            <h1><a href="/">La Tormenta Digital</a></h1>
+        <div style="position:fixed;top:30px;left:50%;transform:translate(-50%,-25px);">
+            <h1><a href="/"><img src="tormenta.svg" /></a></h1>
         </div>
-        <div class="content container">
-            <div class="row">
-                <div class="col-md-8">
+        <div>
+            <div>
+                <div>
                     {% block content %}
                     {% endblock %}
                 </div>
